@@ -6,6 +6,7 @@ Date: 2024-09-29
     - Added more uses to neodymium magnets
   Bugfixes:
     - Updated military tech tree and recipes
+    - Updated ai core recipe
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.3
 Date: 2024-09-28
